# Lucy

./: README.md  config.yml  pom.xml  pyproject.toml
src/lucy/: main.py
src/lucy/bots/: discord_bot.py
src/lucy/cogs/: commands.py  event_listeners.py  scheduled_tasks.py
src/lucy/utils/handlers/: image_manager.py  message_manager.py
src/lucy/utils/inc/: helpers.py
src/main/java/com/brandongcobb/lucy/: Lucy.java
src/main/java/com/brandongcobb/lucy/bots/: DiscordBot.java
src/main/java/com/brandongcobb/lucy/cogs/: Cog.java  EventListeners.java  HybridCommands.java
src/main/java/com/brandongcobb/lucy/records/: ModelInfo.java
src/main/java/com/brandongcobb/lucy/utils/handlers/: AIManager.java  ConfigManager.java  MessageManager.java  ModerationManager.java  Predicator.java
src/main/java/com/brandongcobb/lucy/utils/inc/: Helpers.java  ModelRegistry.java
