[build-system]
requires = [ "poetry-core", "setuptools",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "lucy"
version = "1.0.0"
description = ""
license = "GPL-3.0-or-later"
authors = [ "Brandon Graham Cobb <brandongrahamcobb@icloud.com>",]
readme = "README.md"
homepage = "https://brandongcobb.com"
repository = "https://github.com/brandongrahamcobb/lucy.git"
keywords = [ "AI", "chemistry", "Discord", "json", "moderation", "python", "Twitch", "yaml",]

[tool.poetry.dependencies]
python = "~3.13.1"
openai = "^1.58.1"
aiohttp = "^3.11.11"
asyncpg = "^0.30.0"
discord = "^2.3.2"
opencv-python = "^4.10.0.84"
pyyaml = "^6.0.2"
requests = "^2.32.3"
quart = "^0.20.0"
torch = "^2.5.1"
twitchio = "^2.10.0"
webdriver-manager = "^4.0.2"
transformers = "^4.47.1"
tiktoken = "^0.8.0"
toml = "^0.10.2"
audioop-lts = "^0.2.1"
pytz = "^2024.2"
discord-ext-menus = "^1.1"

[tool.poetry.scripts]
lucy = "lucy.main:run"

[tool.poetry.dependencies.discord-py]
extras = [ "voice",]
version = "^2.5.2"
